correciones de base de datos y agregue el stored procedure : CREATE OR ALTER PROCEDURE sp_ValidarUsuario     @Email NVARCHAR(150),     @Contrasena NVARCHAR(255) AS BEGIN     SELECT         id_persona,         nombre,         apellido,         email,         estado,         tipo_persona     FROM Persona     WHERE email = @Email AND contrasena = @Contrasena AND estado = 1; END; GO

--- a/ProyectoCondominios/Datamodels/MyDatabase.tt
+++ b/ProyectoCondominios/Datamodels/MyDatabase.tt
@@ -116,7 +116,7 @@
 
 	// to configure GetSchemaOptions properties, add them here, before load metadata call
 
-	LoadSqlServerMetadata("MSI\\SQLEXPRESS", "PV_ProyectoFinal");
+	LoadSqlServerMetadata("MSI\\SQLEXPRESS", "PVI_ProyectoFinal");
 
 
 //	LoadSqlServerMetadata(".", "MyDatabase"); // Integrated Security
